
ADD_SUBDIRECTORY( maps )
ADD_SUBDIRECTORY( models )
ADD_SUBDIRECTORY( utils )
ADD_SUBDIRECTORY( viz )
ADD_SUBDIRECTORY( io )

ADD_LIBRARY( efslam SHARED empty.cpp )
SET_TARGET_PROPERTIES( efslam PROPERTIES
    VERSION ${EFSLAM_VERSION}
    SOVERSION ${EFSLAM_VERSION}
)

TARGET_LINK_LIBRARIES( efslam efslam-utils efslam-io )
